--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
             <td><%- dimension %></td>
             <td><%- tipo %></td>
             <td>
-            <a data-toogle="tooltip" data-placement="bottom"  title="Editar dimensión" href="#/dimension/editar/<%- iddimension %>" class="glyphicon glyphicon-pencil glyphicon-lg tooltips"></a>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Editar dimensión" href="#/dimension/editar/<%- iddimension %>" class="glyphicon glyphicon-pencil glyphicon-lg tooltips editar-dimension"></a>
             <a data-toogle="tooltip" data-placement="bottom"  title="Ver factores 3" href="#/dimension/factores/<%- iddimension %>" class="glyphicon glyphicon-list glyphicon-lg tooltips"></a>
             </td>
         </script>
@@ -692,7 +692,7 @@
             <div class="control-group">
                 <label class="control-label" for="dimension">Dimension</label>
                 <div class="controls">
-                  <input id="dimension" name="dimension" type="text" placeholder="Nombre de dimensión" class="input-large" required="">
+                  <input id="dimension" name="dimension" type="text" placeholder="Nombre de dimensión" class="form-control input-large" required="">
                </div>
             </div>
             <div class="control-group">
