--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="mod"></div>
         <div id="nav"></div>
         <div id="app"></div>
-
+        <div id="footer"></div>
         <script type="text/template" id="login-template">
             <div id="login-container">
             <form class="form-signin" role="form" action="user/login" method="post" id="form-login">
@@ -836,6 +836,30 @@
             La dimensión ha sido agregada correctamente.
             <button type="button" class="btn btn-success btn-xs" data-dismiss="modal">Aceptar</button>
             </div>
+        </script>
+        <script type="text/template" id="footer-template">
+            <footer>
+              <div class="navbar navbar-fixed-bottom">
+                  <div class="container">
+                    <div class="row row-centered">
+                       <div class="col-md-3">
+                        Sistema de Tutorías © 2014
+                       </div>                        
+                       <div class="col-md-2">
+                            [<a href="mailto:desarrollo.sii@upa.edu.mx">desarrollo.sii@upa.edu.mx</a>]
+                       </div>    
+                       <div class="col-md-2">
+                            [<a href="mailto:sii@upa.edu.mx">sii@upa.edu.mx</a>]
+                       </div>
+                        <div class="col-md-2">
+                            [<a href="mailto:adria.abrego@upa.edu.mx">adrian.abrego@upa.edu.mx</a>]
+                       </div>
+                       <div class="col-md-3">
+                       </div>  
+                    </div>                  
+                  </div>
+              </div>
+          </footer>
         </script>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/vendor/bootstrap-tooltip.js"></script>
