--- a/index.html
+++ b/index.html
@@ -26,6 +26,169 @@
         <div id="nav"></div>
         <div id="app"></div>
         <div id="footer"></div>
+
+        <script type="text/template" id="tutoria-template">
+            <div class="container">
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-7"><h2>Tutoría Individual</h2></div>
+                  <div class="col-md-3"></div>
+                </div>                
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">Nombre del alumno</div>
+                  <div class="col-md-5">Alfredo Esteban Hernández Dávalos</div>
+                  <div class="col-md-3"></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">Matrícula</div>
+                  <div class="col-md-5">UP100180</div>
+                  <div class="col-md-3"></div>
+                </div>        
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">Grupo</div>
+                  <div class="col-md-5">SEI 10A</div>
+                  <div class="col-md-3"></div>
+                </div> 
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">Periodo</div>
+                  <div class="col-md-5">SEPTIEMBRE-DICIEMBRE 2014</div>
+                  <div class="col-md-3"></div>
+                </div>                
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2">Edad</div>
+                  <div class="col-md-5">23</div>
+                  <div class="col-md-3"></div>
+                </div>                 <br/>
+                <br/>
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th>SOCIODEMOGRÁFICO</th>
+                               
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VIVE SOLO</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VIVE CON SU FAMILIA</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> BAJOS RECURSOS</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> RABAJA</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> CASADO</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SOLTERO</td>
+                            </tr>
+                        </tbody>
+                    </table><table class="table table-striped table-condensed">
+                        <thead>
+                            <tr>
+                                <th>AFECTIVO</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> AUTOESTIMA</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ESTRÉS</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> DEPRESIÓN</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SEXUALIDAD</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ANOREXIA, BULIMIA</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VALORES</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-striped table-condensed">
+                        <thead>
+                            <tr>
+                                <th>COGNITIVO</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE APRENDIZAJE</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> MATERIAS REPROBADAS</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SIN HÁBITOS DE ESTUDIO</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> INASISTENCIAS</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE MEMORIA</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-striped table-condensed">
+                        <thead>
+                            <tr>
+                                <th>MOTOR-SALUD</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> LATERALIDAD</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE LENGUAJE</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SALUD</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS CON ALGUNO DE LOS SENTIDOS</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-striped table-condensed">
+                        <thead>
+                            <tr>
+                                <th>SOCIAL</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE INTERACCIÓN</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ADICCIONES</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> POCAS HABILIDADES SOCIALES</td>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> NO ADAPTADO AL GRUPO</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS CON AUTORIDADES O PROFESORES</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-1"></div>
+
+                <div class="container col-md-12">
+                    <!-- Textarea -->
+                    <div class="control-group">
+                      <label class="control-label" for="id_problematica">Problemática</label>
+                      <div class="controls">                     
+                        <textarea id="id_problematica" name="id_problematica" class="form-control"></textarea><br>
+                      </div>
+                    </div>
+
+                    <!-- Textarea -->
+                    <div class="control-group">
+                      <label class="control-label" for="id_resultados">Resultados logrados</label>
+                      <div class="controls">                     
+                        <textarea id="id_resultados" name="id_resultados" class="form-control"></textarea><br><br><br>
+                      </div>
+                    </div>
+                </div>
+
+        </script>
+
         <script type="text/template" id="login-template">
             <div id="login-container">
             <form class="form-signin" role="form" action="user/login" method="post" id="form-login">
@@ -349,7 +512,7 @@
             <td><%- ultima %></td>
             <% if(TUTORIAS.token != 'docente') { %>
             <td>
-            <a data-toogle="tooltip" data-placement="right"  title="Opcion 1" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips"></a> 
+            <a data-toogle="tooltip" data-placement="right"  title="Aplicar tutoría" href="#/aplicar_tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips"></a> 
             <a data-toogle="tooltip" data-placement="right"  title="Historial"  href="#/historial/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
             </td>
             <%}%>
@@ -363,7 +526,7 @@
             <a data-toogle="tooltip" data-placement="bottom"  title="Solicitar tutoría para alumno" href="#/solicitar/alumno/<%- matricula %>" class="glyphicon glyphicon-link glyphicon-lg tooltips solicitar"></a>
             <% if(TUTORIAS.token != 'docente') { %>
             <% if(TUTORIAS.token != 'tutor') { %>
-            <a data-toogle="tooltip" data-placement="bottom"  title="Opción 2" href="#/tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips" ></a> 
+            <a data-toogle="tooltip" data-placement="bottom"  title="Aplicar tutoria" href="#/aplicar_tutoria/alumno/<%- matricula %>" class="glyphicon glyphicon-comment glyphicon-lg tooltips" ></a> 
             <%}%>
             <a data-toogle="tooltip" data-placement="right"  title="Historial"  href="#/historial/alumno/<%- matricula %>" class="glyphicon glyphicon-floppy-disk glyphicon-lg tooltips"></a>
             <%}%>
