--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </script>
 
         <script type="text/template" id="nav-bar">
-            <div id="navbar" class="navbar navbar-default navbar-static-top" role="navigation">
+            <div id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container nobg">
             <div class="navbar-header">
             <a class="navbar-brand" href="#/">Tutorias</a>
