--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <th>Nombre</th>
             <th>Última Tutoria</th>
             <% if(TUTORIAS.token != "docente") { %>
-            <th>Opc</th>
+            <th>Opciones</th>
             <%}%>
             </tr>
             </thead>
@@ -497,7 +497,7 @@
             <th>Grupo</th>
             <th>Última Tutoria</th>
             <% if(TUTORIAS.token != "docente") { %>
-            <th>Opc</th>
+            <th>Opciones</th>
             <%}%>
             </tr>
             </thead>
