--- a/index.html
+++ b/index.html
@@ -29,146 +29,51 @@
         <div id="footer"></div>
 
         <script type="text/template" id="tutoria-template">
-            <div class="container">
+        <% console.log(alumno)%>
+            <div class="container ">
+             <div class="col-xs-12 dashboard">
+            <div class="dash-content">
+               <h2>Tutoría Individual</h2>
                 <div class="row">
-                  <div class="col-md-2"></div>
-                  <div class="col-md-7"><h2>Tutoría Individual</h2></div>
-                  <div class="col-md-3"></div>
-                </div>                
-                <div class="row">
-                  <div class="col-md-2"></div>
                   <div class="col-md-2">Nombre del alumno</div>
                   <div class="col-md-5">Alfredo Esteban Hernández Dávalos</div>
                   <div class="col-md-3"></div>
                 </div>
                 <div class="row">
-                  <div class="col-md-2"></div>
                   <div class="col-md-2">Matrícula</div>
                   <div class="col-md-5">UP100180</div>
                   <div class="col-md-3"></div>
                 </div>        
                 <div class="row">
-                  <div class="col-md-2"></div>
                   <div class="col-md-2">Grupo</div>
                   <div class="col-md-5">SEI 10A</div>
                   <div class="col-md-3"></div>
                 </div> 
                 <div class="row">
-                  <div class="col-md-2"></div>
                   <div class="col-md-2">Periodo</div>
                   <div class="col-md-5">SEPTIEMBRE-DICIEMBRE 2014</div>
                   <div class="col-md-3"></div>
                 </div>                
                 <div class="row">
-                  <div class="col-md-2"></div>
                   <div class="col-md-2">Edad</div>
                   <div class="col-md-5">23</div>
                   <div class="col-md-3"></div>
-                </div>                 <br/>
+                </div>                
                 <br/>
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <table class="table table-condensed">
-                        <thead>
-                            <tr>
-                                <th>SOCIODEMOGRÁFICO</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VIVE SOLO</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VIVE CON SU FAMILIA</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> BAJOS RECURSOS</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> RABAJA</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> CASADO</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SOLTERO</td>
-                            </tr>
-                        </tbody>
-                    </table><table class="table table-striped table-condensed">
-                        <thead>
-                            <tr>
-                                <th>AFECTIVO</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> AUTOESTIMA</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ESTRÉS</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> DEPRESIÓN</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SEXUALIDAD</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ANOREXIA, BULIMIA</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> VALORES</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="table table-striped table-condensed">
-                        <thead>
-                            <tr>
-                                <th>COGNITIVO</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE APRENDIZAJE</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> MATERIAS REPROBADAS</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SIN HÁBITOS DE ESTUDIO</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> INASISTENCIAS</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE MEMORIA</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="table table-striped table-condensed">
-                        <thead>
-                            <tr>
-                                <th>MOTOR-SALUD</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> LATERALIDAD</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE LENGUAJE</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> SALUD</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS CON ALGUNO DE LOS SENTIDOS</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="table table-striped table-condensed">
-                        <thead>
-                            <tr>
-                                <th>SOCIAL</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS DE INTERACCIÓN</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> ADICCIONES</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> POCAS HABILIDADES SOCIALES</td>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> NO ADAPTADO AL GRUPO</td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-6"><input type="checkbox" id="inlineCheckbox1" value="option1"> PROBLEMAS CON AUTORIDADES O PROFESORES</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-md-1"></div>
+                <br/>
+                <ul class="nav nav-tabs" role="tablist" id="myTab">
+                  <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
+                  <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
+                  <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
+                  <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+                </ul>
 
+                <div class="tab-content">
+                  <div class="tab-pane active" id="home">tab1</div>
+                  <div class="tab-pane" id="profile">tab2</div>
+                  <div class="tab-pane" id="messages">tab3</div>
+                  <div class="tab-pane" id="settings">tab4</div>
+                </div>
                 <div class="container col-md-12">
                     <!-- Textarea -->
                     <div class="control-group">
@@ -186,7 +91,8 @@
                       </div>
                     </div>
                 </div>
-
+            </div>
+        </div>
         </script>
 
         <script type="text/template" id="login-template">
