--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <script type="text/template" id="login-template">
             <div id="login-container">
             <form class="form-signin" role="form" action="user/login" method="post" id="form-login">
-            <h2 class="form-signin-heading text-primary">Tutorias</h2>
+            <h2 class="form-signin-heading text-primary">Tutorías</h2>
             <input type="email" name="email" class="form-control" placeholder="Correo Electrónico" required autofocus>
             <input type="password" name="password" class="form-control" placeholder="Contraseña" required>
 
@@ -338,7 +338,7 @@
             <div id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container nobg">
             <div class="navbar-header">
-            <a class="navbar-brand" href="#/">Tutorias</a>
+            <a class="navbar-brand" href="#/">Tutorías</a>
             </div>
             <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -391,7 +391,7 @@
             <table id="table-alumnos" class="table table-striped table-hover">
             <thead>
             <tr>
-            <th>Metrícula</th>
+            <th>Matrícula</th>
             <th>Nombre</th>
             <th>Última Tutoria</th>
             <% if(TUTORIAS.token != "docente") { %>
