--- a/index.html
+++ b/index.html
@@ -96,7 +96,60 @@
         </script>
 
         <script type="text/template" id="tutoriaGrupal-template">
-            <div> HOLA </div>
+            <div class="container ">
+                <div class="col-xs-12 dashboard">
+                    <div class="dash-content">
+                       <h2>Tutoría Grupal</h2>
+                        <div class="row">
+                          <div class="col-md-2">Nombre del tutor</div>
+                          <div class="col-md-5">Fernando Ulises Medrano</div>
+                          <div class="col-md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Fecha</div>
+                            <div class="col-md-5">12/08/14</div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Carrera</div>
+                            <div class="col-md-5">SEI</div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Grupo</div>
+                            <div class="col-md-5">3B</div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Horario</div>
+                            <div class="col-md-5"></div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Numero de alumnos</div>
+                            <div class="col-md-5"></div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">Tutoría</div>
+                            <div class="col-md-5">Mensual / Extaordinaria</div>
+                            <div class="col.md-3"></div>
+                        </div>
+                        <br>
+
+                        <ul class="nav nav-tabs" role="tablist" id="lista-dimensiones-tutoria-grupal"></ul>
+                        <div class="tab-content" id="container-dimensiones-tutoria-grupal"></div>
+
+                        <br/>
+                        <div class="control-group">
+                            <label class="control-label" for="id_resultados">Acciones por emprender</label>
+                            <div class="controls">                     
+                                <textarea id="id_resultados" name="id_resultados" class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </script>
         
         <script type="text/template" id="menu-dimension-tutoria-template">
