--- a/index.html
+++ b/index.html
@@ -721,6 +721,92 @@
             </div>
         </script>
 
+        <script type="text/template" id="solicitud-alumnos-template">
+            <div class="container">
+                <div class="col-xs-12 dashboard">
+                    <div class="dash-content">
+                        <h2>Solicitudes Alumno </h2>
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i  class="glyphicon glyphicon-search"></i>
+                                </span>
+                                <input id="buscar-alumno" placeholder="Buscar por matricula o nombre" class="form-control" />
+                            </div>
+                        </div>
+                        <!--Tabla de solicitud de alumnos-->
+                        <table id="table-solicitudes-alumnos" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Nombre</th>
+                                    <th>Matricula</th>
+                                    <th>Fecha</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>           
+                    </div>
+                </div>
+            </div>
+        </script>
+
+        <script type="text/template" id="solicitud-alumno-template">
+            <td><%- idsolicitud %></td>
+            <td><%- matricula %></td>
+            <td><%- solicitante %></td>
+            <td><%- fecha %></td>
+            <% if(TUTORIAS.token == 'administrador') { %>
+            <td>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Editar información de alumno" href="#editar/alumno<%- matricula %>" class="glyphicon glyphicon-pencil glyphicon-lg tooltips editar-alumno"></a> 
+            </td>
+            <%}%>
+        </script>
+
+        <script type="text/template" id="solicitud-grupos-template">
+            <div class="container">
+                <div class="col-xs-12 dashboard">
+                    <div class="dash-content">
+                        <h2>Solicitudes Grupo </h2>
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i  class="glyphicon glyphicon-search"></i>
+                                </span>
+                                <input id="buscar-alumno" placeholder="Buscar por carrera ó grupo" class="form-control" />
+                            </div>
+                        </div>
+                        <!--Tabla de solicitud de grupos-->
+                        <table id="table-solicitudes-grupos" class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Grupo</th>
+                                    <th>Carrera</th>
+                                    <th>Fecha</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>           
+                    </div>
+                </div>
+            </div>
+        </script>
+
+        <script type="text/template" id="solicitud-grupo-template">
+            <td><%- idsolicitud %></td>
+            <td><%- grupo %></td>
+            <td><%- carrera %></td>
+            <td><%- fecha %></td>
+            <% if(TUTORIAS.token == 'administrador') { %>
+            <td>
+            <a data-toogle="tooltip" data-placement="bottom"  title="Editar información de grupo" href="#editar/alumno<%- grupo %>" class="glyphicon glyphicon-pencil glyphicon-lg tooltips editar-alumno"></a> 
+            </td>
+            <%}%>
+        </script>
+
         <script type="text/template" id="usuario-template">
             <td><%- idPersona %></td>
             <td><%- nombre %></td>
