--- a/index.html
+++ b/index.html
@@ -742,6 +742,7 @@
                                     <th>Nombre</th>
                                     <th>Matricula</th>
                                     <th>Fecha</th>
+                                    <th>Opciones</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -785,6 +786,7 @@
                                     <th>Grupo</th>
                                     <th>Carrera</th>
                                     <th>Fecha</th>
+                                    <th>Opciones</th>
                                 </tr>
                             </thead>
                             <tbody>
